--- a/World Happiness Report.ipynb
+++ b/World Happiness Report.ipynb
@@ -706,7 +706,7 @@
    "id": "950a5213",
    "metadata": {},
    "source": [
-    "2. Only one colum is Object datatype rest all are float and intiger"
+    "2. Only one colum is Object datatype rest all are float and integer"
    ]
   },
   {
@@ -750,7 +750,7 @@
    "id": "44ed6551",
    "metadata": {},
    "source": [
-    "# Next will check if outliers present in the dataset, for I will be using box."
+    "# Next will check if outliers present in the dataset, for that I will be using box."
    ]
   },
   {
@@ -773,7 +773,7 @@
     }
    ],
    "source": [
-    "#Will implement boxplot check outliers\n",
+    "#Will implement boxplot to check outliers\n",
     "plt.figure(figsize = (20,20))\n",
     "plotnumber = 1\n",
     "\n",
@@ -877,7 +877,6 @@
     }
    ],
    "source": [
-    "#Will implement boxplot check outliers\n",
     "plt.figure(figsize = (20,20))\n",
     "plotnumber = 1\n",
     "\n",
@@ -1811,6 +1810,7 @@
     }
    ],
    "source": [
+    "#I will plot a scatter plot to observ how well our model is Predicting the label.\n",
     "plt.scatter(y_test,y_pred)\n",
     "\n",
     "plt.xlabel('Actual Happiness Score')\n",
@@ -1827,6 +1827,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing Mean Squared Error and Mean Absolute Error\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error"
    ]
   },
