--- a/World Happiness Report.ipynb
+++ b/World Happiness Report.ipynb
@@ -2061,245 +2061,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "id": "e3a60c45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
+       "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table id=\"T_d26c6_\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Actual Happiness Score</th>\n",
-       "      <th>Predicted Happiness Score</th>\n",
+       "    <tr>\n",
+       "      <th class=\"col_heading level0 col0\" >Actual Happiness Score</th>\n",
+       "      <th class=\"col_heading level0 col1\" >Predicted Happiness Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>4.033</td>\n",
-       "      <td>4.446074</td>\n",
+       "      <td id=\"T_d26c6_row0_col0\" class=\"data row0 col0\" >4.033000</td>\n",
+       "      <td id=\"T_d26c6_row0_col1\" class=\"data row0 col1\" >4.446074</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>6.798</td>\n",
-       "      <td>7.056224</td>\n",
+       "      <td id=\"T_d26c6_row1_col0\" class=\"data row1 col0\" >6.798000</td>\n",
+       "      <td id=\"T_d26c6_row1_col1\" class=\"data row1 col1\" >7.056224</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>4.565</td>\n",
-       "      <td>4.903723</td>\n",
+       "      <td id=\"T_d26c6_row2_col0\" class=\"data row2 col0\" >4.565000</td>\n",
+       "      <td id=\"T_d26c6_row2_col1\" class=\"data row2 col1\" >4.903723</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>5.975</td>\n",
-       "      <td>5.462047</td>\n",
+       "      <td id=\"T_d26c6_row3_col0\" class=\"data row3 col0\" >5.975000</td>\n",
+       "      <td id=\"T_d26c6_row3_col1\" class=\"data row3 col1\" >5.462047</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>6.003</td>\n",
-       "      <td>5.472968</td>\n",
+       "      <td id=\"T_d26c6_row4_col0\" class=\"data row4 col0\" >6.003000</td>\n",
+       "      <td id=\"T_d26c6_row4_col1\" class=\"data row4 col1\" >5.472968</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>3.678</td>\n",
-       "      <td>3.957728</td>\n",
+       "      <td id=\"T_d26c6_row5_col0\" class=\"data row5 col0\" >3.678000</td>\n",
+       "      <td id=\"T_d26c6_row5_col1\" class=\"data row5 col1\" >3.957728</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>6.611</td>\n",
-       "      <td>7.592266</td>\n",
+       "      <td id=\"T_d26c6_row6_col0\" class=\"data row6 col0\" >6.611000</td>\n",
+       "      <td id=\"T_d26c6_row6_col1\" class=\"data row6 col1\" >7.592266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>7.286</td>\n",
-       "      <td>6.813815</td>\n",
+       "      <td id=\"T_d26c6_row7_col0\" class=\"data row7 col0\" >7.286000</td>\n",
+       "      <td id=\"T_d26c6_row7_col1\" class=\"data row7 col1\" >6.813815</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>5.855</td>\n",
-       "      <td>5.992999</td>\n",
+       "      <td id=\"T_d26c6_row8_col0\" class=\"data row8 col0\" >5.855000</td>\n",
+       "      <td id=\"T_d26c6_row8_col1\" class=\"data row8 col1\" >5.992999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>122</th>\n",
-       "      <td>4.507</td>\n",
-       "      <td>4.278821</td>\n",
+       "      <td id=\"T_d26c6_row9_col0\" class=\"data row9 col0\" >4.507000</td>\n",
+       "      <td id=\"T_d26c6_row9_col1\" class=\"data row9 col1\" >4.278821</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>5.995</td>\n",
-       "      <td>5.693586</td>\n",
+       "      <td id=\"T_d26c6_row10_col0\" class=\"data row10 col0\" >5.995000</td>\n",
+       "      <td id=\"T_d26c6_row10_col1\" class=\"data row10 col1\" >5.693586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>3.656</td>\n",
-       "      <td>3.966011</td>\n",
+       "      <td id=\"T_d26c6_row11_col0\" class=\"data row11 col0\" >3.656000</td>\n",
+       "      <td id=\"T_d26c6_row11_col1\" class=\"data row11 col1\" >3.966011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>4.297</td>\n",
-       "      <td>5.100030</td>\n",
+       "      <td id=\"T_d26c6_row12_col0\" class=\"data row12 col0\" >4.297000</td>\n",
+       "      <td id=\"T_d26c6_row12_col1\" class=\"data row12 col1\" >5.100030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>5.548</td>\n",
-       "      <td>5.713062</td>\n",
+       "      <td id=\"T_d26c6_row13_col0\" class=\"data row13 col0\" >5.548000</td>\n",
+       "      <td id=\"T_d26c6_row13_col1\" class=\"data row13 col1\" >5.713062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>7.522</td>\n",
-       "      <td>7.209331</td>\n",
+       "      <td id=\"T_d26c6_row14_col0\" class=\"data row14 col0\" >7.522000</td>\n",
+       "      <td id=\"T_d26c6_row14_col1\" class=\"data row14 col1\" >7.209331</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>5.813</td>\n",
-       "      <td>5.579403</td>\n",
+       "      <td id=\"T_d26c6_row15_col0\" class=\"data row15 col0\" >5.813000</td>\n",
+       "      <td id=\"T_d26c6_row15_col1\" class=\"data row15 col1\" >5.579403</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>5.754</td>\n",
-       "      <td>5.858874</td>\n",
+       "      <td id=\"T_d26c6_row16_col0\" class=\"data row16 col0\" >5.754000</td>\n",
+       "      <td id=\"T_d26c6_row16_col1\" class=\"data row16 col1\" >5.858874</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>6.670</td>\n",
-       "      <td>5.956995</td>\n",
+       "      <td id=\"T_d26c6_row17_col0\" class=\"data row17 col0\" >6.670000</td>\n",
+       "      <td id=\"T_d26c6_row17_col1\" class=\"data row17 col1\" >5.956995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>6.786</td>\n",
-       "      <td>6.006162</td>\n",
+       "      <td id=\"T_d26c6_row18_col0\" class=\"data row18 col0\" >6.786000</td>\n",
+       "      <td id=\"T_d26c6_row18_col1\" class=\"data row18 col1\" >6.006162</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>4.898</td>\n",
-       "      <td>4.170855</td>\n",
+       "      <td id=\"T_d26c6_row19_col0\" class=\"data row19 col0\" >4.898000</td>\n",
+       "      <td id=\"T_d26c6_row19_col1\" class=\"data row19 col1\" >4.170855</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7.587</td>\n",
-       "      <td>7.048741</td>\n",
+       "      <td id=\"T_d26c6_row20_col0\" class=\"data row20 col0\" >7.587000</td>\n",
+       "      <td id=\"T_d26c6_row20_col1\" class=\"data row20 col1\" >7.048741</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>5.828</td>\n",
-       "      <td>5.169893</td>\n",
+       "      <td id=\"T_d26c6_row21_col0\" class=\"data row21 col0\" >5.828000</td>\n",
+       "      <td id=\"T_d26c6_row21_col1\" class=\"data row21 col1\" >5.169893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>6.168</td>\n",
-       "      <td>6.340794</td>\n",
+       "      <td id=\"T_d26c6_row22_col0\" class=\"data row22 col0\" >6.168000</td>\n",
+       "      <td id=\"T_d26c6_row22_col1\" class=\"data row22 col1\" >6.340794</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>4.252</td>\n",
-       "      <td>4.612380</td>\n",
+       "      <td id=\"T_d26c6_row23_col0\" class=\"data row23 col0\" >4.252000</td>\n",
+       "      <td id=\"T_d26c6_row23_col1\" class=\"data row23 col1\" >4.612380</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7.378</td>\n",
-       "      <td>6.906053</td>\n",
+       "      <td id=\"T_d26c6_row24_col0\" class=\"data row24 col0\" >7.378000</td>\n",
+       "      <td id=\"T_d26c6_row24_col1\" class=\"data row24 col1\" >6.906053</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>4.971</td>\n",
-       "      <td>3.689920</td>\n",
+       "      <td id=\"T_d26c6_row25_col0\" class=\"data row25 col0\" >4.971000</td>\n",
+       "      <td id=\"T_d26c6_row25_col1\" class=\"data row25 col1\" >3.689920</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>4.332</td>\n",
-       "      <td>5.705166</td>\n",
+       "      <td id=\"T_d26c6_row26_col0\" class=\"data row26 col0\" >4.332000</td>\n",
+       "      <td id=\"T_d26c6_row26_col1\" class=\"data row26 col1\" >5.705166</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>5.477</td>\n",
-       "      <td>6.004733</td>\n",
+       "      <td id=\"T_d26c6_row27_col0\" class=\"data row27 col0\" >5.477000</td>\n",
+       "      <td id=\"T_d26c6_row27_col1\" class=\"data row27 col1\" >6.004733</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>4.739</td>\n",
-       "      <td>4.969106</td>\n",
+       "      <td id=\"T_d26c6_row28_col0\" class=\"data row28 col0\" >4.739000</td>\n",
+       "      <td id=\"T_d26c6_row28_col1\" class=\"data row28 col1\" >4.969106</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>4.610</td>\n",
-       "      <td>3.844180</td>\n",
+       "      <td id=\"T_d26c6_row29_col0\" class=\"data row29 col0\" >4.610000</td>\n",
+       "      <td id=\"T_d26c6_row29_col1\" class=\"data row29 col1\" >3.844180</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>4.677</td>\n",
-       "      <td>4.745173</td>\n",
+       "      <td id=\"T_d26c6_row30_col0\" class=\"data row30 col0\" >4.677000</td>\n",
+       "      <td id=\"T_d26c6_row30_col1\" class=\"data row30 col1\" >4.745173</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>5.007</td>\n",
-       "      <td>5.276290</td>\n",
+       "      <td id=\"T_d26c6_row31_col0\" class=\"data row31 col0\" >5.007000</td>\n",
+       "      <td id=\"T_d26c6_row31_col1\" class=\"data row31 col1\" >5.276290</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "</table>\n"
       ],
       "text/plain": [
-       "     Actual Happiness Score  Predicted Happiness Score\n",
-       "136                   4.033                   4.446074\n",
-       "23                    6.798                   7.056224\n",
-       "116                   4.565                   4.903723\n",
-       "47                    5.975                   5.462047\n",
-       "43                    6.003                   5.472968\n",
-       "147                   3.678                   3.957728\n",
-       "27                    6.611                   7.592266\n",
-       "8                     7.286                   6.813815\n",
-       "53                    5.855                   5.992999\n",
-       "122                   4.507                   4.278821\n",
-       "44                    5.995                   5.693586\n",
-       "149                   3.656                   3.966011\n",
-       "129                   4.297                   5.100030\n",
-       "69                    5.548                   5.713062\n",
-       "3                     7.522                   7.209331\n",
-       "58                    5.813                   5.579403\n",
-       "62                    5.754                   5.858874\n",
-       "26                    6.670                   5.956995\n",
-       "24                    6.786                   6.006162\n",
-       "96                    4.898                   4.170855\n",
-       "0                     7.587                   7.048741\n",
-       "56                    5.828                   5.169893\n",
-       "40                    6.168                   6.340794\n",
-       "132                   4.252                   4.612380\n",
-       "6                     7.378                   6.906053\n",
-       "93                    4.971                   3.689920\n",
-       "127                   4.332                   5.705166\n",
-       "70                    5.477                   6.004733\n",
-       "106                   4.739                   4.969106\n",
-       "114                   4.610                   3.844180\n",
-       "111                   4.677                   4.745173\n",
-       "92                    5.007                   5.276290"
+       "<pandas.io.formats.style.Styler at 0x19c2f227eb0>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_frame = pd.DataFrame({'Actual Happiness Score':y_test,'Predicted Happiness Score':y_pred})\n",
+    "data_frame = data_frame.style.hide_index()\n",
     "data_frame"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "371a36d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
