--- a/Avacado Project.ipynb
+++ b/Avacado Project.ipynb
@@ -82,18 +82,17 @@
     "\n",
     "\n",
     "#Import Classification models\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.linear_model import Ridge, Lasso\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.svm import SVR\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from xgboost import XGBRegressor\n",
-    "from sklearn.linear_model import ElasticNet\n",
-    "from sklearn.linear_model import SGDRegressor\n",
-    "from sklearn.ensemble import BaggingRegressor\n",
-    "from sklearn.ensemble import AdaBoostRegressor\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import RidgeClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "\n",
     "\n",
     "\n",
